Products.MeetingLiege Changelog
===============================

4.1b3 (unreleased)
------------------

- 'Accept and return' transition also works when item not to send to Council, in this case,
  item is just duplicated and not sent to Council

4.1b2 (2018-01-23)
------------------
- Added 'Bourgmestre' MeetingConfig (workflow, adapters, ...) :
  - main_infos history on item
  - bourgmestre WFs for item and meeting
  - hide history transitions for relevant roles

4.1b1 (2017-12-01)
------------------
- When an item is sent from College to Council, keep the 'toDiscuss' field
- Do not call at_post_edit_script directly anymore, use Meeting(Item)._update_after_edit
- Moved to advanced tests/helpers.WF_STATE_NAME_MAPPINGS from PloneMeeting

4.0 (2017-08-18)
----------------
- Finance advisers of an item are now able to add decision annexes
  when the item is decided
- Added possibility to manage MeetingItem.itemIsSigned when item is
  'presented' or 'itemfrozen' besides the fact that it is still manageable
  when the item is decided
- Added a 'Echevinat' faceted advanced criterion based on groupsOfMatter index
- Moved historization of signed financial advice to real versions
- Added listType 'Addendum' for items of Council (added possibility to define 'items
  without a number' as well)
- Added possibility to manually send items from College to Council once item is 'itemfrozen'
- Restricted power observers may not see 'late' council items if not decided
- Added state 'sent_to_council_emergency' on a College item to make it possible
  to keep a link between a College item and a Council item emergency if the original
  College item was not linked to a meeting
- When a Council item is 'delayed', it is automatically sent back to College in 'itemcreated'
  state to make full validation process again in College to be sent again in Council, finance
  advice does not follow
- When a Council item is 'returned', it is automatically sent back to College in 'validated'